--- a/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.scss
+++ b/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.scss
@@ -238,6 +238,7 @@
             width: 12vw;
             height: 2px;
             background: var(--primary-color);
+            border: 1px solid;
             position: absolute;
             bottom: 0;
             left: calc(50% - 6vw);
