--- a/src/components/PlayNow/playNow.css
+++ b/src/components/PlayNow/playNow.css
@@ -56,7 +56,7 @@
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  padding: 10px 10%;
+  padding: 1vw 10%;
 }
 
 .play-now-wrapper .text-wrapper .title {
