--- a/src/components/PlayNow/playNow.scss
+++ b/src/components/PlayNow/playNow.scss
@@ -35,7 +35,7 @@
         justify-content: center;
         align-items: center;
         height: fit-content;
-        padding: 10px 10%;
+        padding: 1vw 10%;
 
         .title {
             font-family: Questrial;
