--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@
   --background-color: #f7f7f7;
   --secondary-color: #00F0FF;
   --primary: #00B6F0;
+  --primary-transparent: #00f0dc44; 
   --primary-color: var(--primary);
   --text-color-dark: black;
   --text-color-light: rgb(149, 150, 154);
