--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -143,7 +143,7 @@
   right: 1.25%;
   top: 8.42%;
   bottom: -0.06%;
-  padding: 1vw;
+  padding: 1.5vw;
   background: rgba(90, 35, 207, 0.22);
   border: 2px solid #1AA0BD;
   -webkit-box-sizing: border-box;
@@ -178,6 +178,10 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.wrapper .third-section .others .responsive-text-layout {
+  display: none;
+}
+
 .wrapper .third-section .others .img1 {
   position: absolute;
   right: 1vw;
@@ -191,6 +195,10 @@
   left: calc(50%);
   width: 12vw;
   z-index: 1;
+}
+
+.wrapper .third-section .others .img2-responsive {
+  display: none;
 }
 
 .wrapper .third-section .others .img3 {
@@ -234,6 +242,10 @@
   margin-bottom: 2vw;
 }
 
+.wrapper .fifth-section {
+  display: none;
+}
+
 .wrapper .border {
   width: 12vw;
   height: 2px;
@@ -252,8 +264,197 @@
     width: 142px;
     height: 142px;
   }
+  .wrapper .second-section {
+    display: none;
+  }
+  .wrapper .third-section {
+    background: none !important;
+    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .wrapper .third-section .others {
+    width: 100%;
+    position: unset;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 20px 0;
+  }
+  .wrapper .third-section .others .img3 {
+    display: none;
+  }
+  .wrapper .third-section .others .img1 {
+    display: none;
+  }
+  .wrapper .third-section .others .img2 {
+    position: unset;
+    width: 177px;
+    margin: auto;
+  }
+  .wrapper .third-section .others .img2-responsive {
+    position: absolute;
+    width: 101px;
+    right: 10px;
+    top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .wrapper .third-section .others .text-layout {
+    width: 40%;
+    right: 10px;
+    top: 30px;
+    left: auto;
+    bottom: auto;
+    padding: 10px;
+  }
+  .wrapper .third-section .others .responsive-text-layout {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 32px;
+    font-family: Questrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: auto;
+    padding: 15px 30px;
+  }
+  .wrapper .third-section .main {
+    width: 100%;
+  }
+  .wrapper .middle-bar {
+    display: none;
+  }
+  .wrapper .fourth-section {
+    background: none;
+  }
+  .wrapper .fourth-section .background {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+  }
   .wrapper .fourth-section .article-wrapper {
     width: 100%;
+  }
+  .wrapper .fifth-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .wrapper .fifth-section .info {
+    padding: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .wrapper .fifth-section .info .text-layout {
+    background: rgba(76, 93, 138, 0.5);
+    border-radius: 12px;
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+    font-family: Questrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 12px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 10px 20px;
+  }
+  .wrapper .fifth-section .info .command {
+    position: relative;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-top: 30px;
+  }
+  .wrapper .fifth-section .info .command .text-layout {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 12px;
+    font-family: Questrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 16px;
+    display: block;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 10px 20px;
+    -webkit-transform: none;
+            transform: none;
+  }
+  .wrapper .fifth-section .info .command .text-layout a {
+    color: var(--primary-color);
+    text-decoration: none;
+  }
+  .wrapper .fifth-section .info .command img {
+    position: absolute;
+    width: 64px;
+    height: auto;
+    right: -20px;
+    top: -20px;
+  }
+  .wrapper .fifth-section .character-layout {
+    margin-top: 50px;
   }
 }
 /*# sourceMappingURL=home.css.map */
