--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -116,7 +116,7 @@
         right: 1.25%;
         top: 8.42%;
         bottom: -0.06%;
-        padding: 1vw;
+        padding: 1.5vw;
         background: rgba(90, 35, 207, 0.22);
         border: 2px solid #1AA0BD;
         box-sizing: border-box;
@@ -140,7 +140,9 @@
           text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         }
       }
-
+      .responsive-text-layout {
+        display: none;
+      }
       .img1 {
         position: absolute;
         right: 1vw;
@@ -154,6 +156,10 @@
         left: calc(50%);
         width: 12vw;
         z-index: 1;
+      }
+
+      .img2-responsive {
+        display: none;
       }
 
       .img3 {
@@ -193,6 +199,10 @@
     }
   }
 
+  .fifth-section {
+    display: none;
+  }
+
   .border {
     width: 12vw;
     height: 2px;
@@ -214,13 +224,166 @@
       width: 142px;
       height: 142px;
     }
-    .third-section {
 
+    .second-section {
+      display: none;
     }
 
+    .third-section {
+      background: none !important;
+      position: relative;
+
+      .others {
+        .img3 {
+          display: none;
+        }
+
+        .img1 {
+          display: none;
+        }
+
+        .img2 {
+          position: unset;
+          width: 177px;
+          margin: auto;
+        }
+
+        .img2-responsive {
+          position: absolute;
+          width: 101px;
+          right: 10px;
+          top: 0;
+          display: flex;
+        }
+
+        .text-layout {
+          width: 40%;
+          right: 10px;
+          top: 30px;
+          left: auto;
+          bottom: auto;
+          padding: 10px;
+        }
+
+        .responsive-text-layout {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: rgba(0, 0, 0, 0.5);
+          border-radius: 32px;
+          font-family: Questrial;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 12px;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          color: #FFFFFF;
+          width: fit-content;
+          margin: auto;
+          padding: 15px 30px;
+        }
+
+        width: 100%;
+        position: unset;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 20px 0;
+      }
+
+      flex-direction: column;
+
+      .main {
+        width: 100%;
+      }
+    }
+
+    .middle-bar {
+      display: none;
+    }
+
+
     .fourth-section {
+      background: none;
+
+      .background {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+
       .article-wrapper {
         width: 100%;
+      }
+    }
+
+    .fifth-section {
+      display: flex;
+      flex-direction: column;
+      .info {
+        padding: 50px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        .text-layout {
+          background: rgba(76, 93, 138, 0.5);
+          border-radius: 12px;
+          transform: rotate(-4deg);
+          font-family: Questrial;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 12px;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          width: fit-content;
+          color: #FFFFFF;
+          text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          padding: 10px 20px;
+        }
+
+        .command {
+          position: relative;
+          width: fit-content;
+          margin-top: 30px;
+          .text-layout {
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 12px;
+            font-family: Questrial;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 16px;
+            display: block;
+            align-items: center;
+            text-align: center;
+            color: #FFFFFF;
+            width: fit-content;
+            padding: 10px 20px;
+            transform: none;
+            a {
+              color: var(--primary-color);
+              text-decoration: none;
+            }
+          }
+
+          img {
+            position: absolute;
+            width: 64px;
+            height: auto;
+            right: -20px;
+            top: -20px;
+          }
+        }
+      }
+
+      .character-layout {
+        margin-top: 50px;
       }
     }
   }
