--- a/public/assets/css/fonts.css
+++ b/public/assets/css/fonts.css
@@ -21,3 +21,38 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Questrial';
+  src: url('../fonts/Questrial/Questrial-Regular.ttf');
+  src: local('Questrial'), local('Questrial'),
+      url('../fonts/Questrial/Questrial-Regular.ttf') format('embedded-opentype'),
+      url('../fonts/Questrial/Questrial-Regular.ttf') format('woff2'),
+      url('../fonts/Questrial/Questrial-Regular.ttf') format('woff'),
+      url('../fonts/Questrial/Questrial-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Orbitron';
+  src: url('../fonts/Orbitron/Orbitron-Regular.ttf');
+  src: local('Orbitron'), local('Orbitron'),
+      url('../fonts/Orbitron/Orbitron-Regular.ttf') format('embedded-opentype'),
+      url('../fonts/Orbitron/Orbitron-Regular.ttf') format('woff2'),
+      url('../fonts/Orbitron/Orbitron-Regular.ttf') format('woff'),
+      url('../fonts/Orbitron/Orbitron-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Prompt';
+  src: url('../fonts/Prompt/Prompt-Regular.ttf');
+  src: local('Prompt'), local('Prompt'),
+      url('../fonts/Prompt/Prompt-Regular.ttf') format('embedded-opentype'),
+      url('../fonts/Prompt/Prompt-Regular.ttf') format('woff2'),
+      url('../fonts/Prompt/Prompt-Regular.ttf') format('woff'),
+      url('../fonts/Prompt/Prompt-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
