--- a/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.css
+++ b/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.css
@@ -59,7 +59,7 @@
   background-repeat: no-repeat;
   color: #00B6F0;
   position: absolute;
-  padding: 1.5vw 2.5vw;
+  padding: 1.5vw 3.5vw;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -228,7 +228,7 @@
   border-radius: 32px;
   color: white;
   width: 80%;
-  font-size: 2vw;
+  font-size: 1.9vw;
   font-weight: 400;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -328,6 +328,7 @@
   width: 12vw;
   height: 2px;
   background: var(--primary-color);
+  border: 1px solid;
   position: absolute;
   bottom: 0;
   left: calc(50% - 6vw);
