--- a/src/components/LeftHeader/leftHeader.scss
+++ b/src/components/LeftHeader/leftHeader.scss
@@ -15,11 +15,12 @@
     .content-wrapper {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
         padding: 16px 30px 16px 10px;
     }
     .logo-wrapper {
         width: 20%;
+        margin-left: 0.7vw;
         z-index: 1;
         display: flex;
         align-items: center;
@@ -31,14 +32,14 @@
         }
     }
     .logo-title-wrapper {
-        width: 75%;
+        width: 80%;
         z-index: 1;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100%;
         img {
-            width: 85%;
+            width: 80%;
         }
         max-height: 95%;
     }
@@ -50,22 +51,6 @@
         .background {
             width: 100%;
             height: auto;
-        }
-    }
-}
-@media(max-width: 767px) {
-    .left-pageHeader-wrapper {
-        .logo-wrapper {
-            img {
-                width: 34px;
-                height: 32px;
-            }
-        }
-        .logo-title-wrapper {
-            img {
-                width: 97px;
-                height: 19px;
-            }
         }
     }
 }
