--- a/src/components/PlayNow/playNow.scss
+++ b/src/components/PlayNow/playNow.scss
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     padding: 4vw;
-    width: 35vw;
-    height: 50vw;
+    width: 32vw;
+    height: 45vw;
     background: rgba(12, 29, 61, 0.5);
     border-radius: 24px;
     position: relative;
@@ -43,7 +43,7 @@
             font-style: normal;
             font-weight: normal;
             font-size: 2vw;
-            line-height: 2vh;
+            line-height: 2vw;
             display: flex;
             align-items: center;
             text-align: center;
