--- a/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.scss
+++ b/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.scss
@@ -183,7 +183,7 @@
     background: #151D30;
     display: flex;
     justify-content: space-around;
-    padding: 10px;
+    padding: 1vw;
     align-items: center;
     .left, .right {
         display: flex;
