--- a/src/components/RightHeader/rightHeader.css
+++ b/src/components/RightHeader/rightHeader.css
@@ -45,12 +45,12 @@
 .right-pageHeader-wrapper .avatar {
   width: 5vw;
   height: auto;
-  border: 5px solid #5dbce7;
-  border-top-right-radius: 12px;
-  border-bottom-left-radius: 12px;
+  border: 0.5vw solid #5dbce7;
+  border-top-right-radius: 1vw;
+  border-bottom-left-radius: 1vw;
   padding: 0.2vw;
   background-color: white;
-  margin-top: 9px;
+  margin-top: 1vw;
 }
 
 .right-pageHeader-wrapper .header-connect {
@@ -79,7 +79,7 @@
   display: none;
 }
 
-@media (min-width: 2000px) {
+@media (min-width: 2000px) and (min-device-width: 2000px) {
   .right-pageHeader-wrapper .background {
     width: 100%;
     height: auto;
@@ -90,13 +90,13 @@
   }
 }
 
-@media (min-width: 1600px) {
+@media (min-width: 1600px) and (min-device-width: 1600px) {
   .right-pageHeader-wrapper .avatar {
     height: 5vw;
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 991px) and (max-device-width: 991px) {
   .right-pageHeader-wrapper .setting {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -107,14 +107,14 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767px) and (max-device-width: 767px) {
   .right-pageHeader-wrapper .avatar {
     width: 114px;
     height: 104px;
     right: 0;
     top: -50px;
     bottom: 100%;
-    border: 5px solid #5dbce7;
+    border: 0.5vw solid #5dbce7;
     border-top-right-radius: 12px;
     border-bottom-left-radius: 12px;
     padding: 0.2vw;
