--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -215,7 +215,7 @@
   }
 }
 
-@media(max-width: 767px) {
+@media(max-width: 767px) and (max-device-width: 767px) {
   .wrapper {
     .first-section .top1 {
       width: 146px;
