--- a/src/components/Article/article.scss
+++ b/src/components/Article/article.scss
@@ -69,7 +69,7 @@
 
 }
 
-@media(max-width: 767px) {
+@media(max-width: 767px) and (max-device-width: 767px) {
     .article.media {
         .thumbnail {
             width: 72px;
