--- a/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.css
+++ b/src/components/GameCharactersViewDesktop/gmaeCharactersViewDesktop.css
@@ -241,7 +241,7 @@
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding: 10px;
+  padding: 1vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
