--- a/src/components/LeftHeader/leftHeader.css
+++ b/src/components/LeftHeader/leftHeader.css
@@ -73,7 +73,7 @@
   width: 80%;
 }
 
-@media (min-width: 2000px) {
+@media (min-width: 2000px) and (min-device-width: 2000px) {
   .left-pageHeader-wrapper .background {
     width: 100%;
     height: auto;
