--- a/src/components/PageHeader/pageHeader.css
+++ b/src/components/PageHeader/pageHeader.css
@@ -30,7 +30,7 @@
   z-index: 2;
 }
 
-@media screen and (max-width: 991px) and (min-width: 768px) {
+@media screen and (max-width: 991px) and (min-width: 768px) and (max-device-width: 991px) and (min-device-width: 768px) {
   .page-header-wrapper .left-wrapper {
     width: 25vw;
     height: 79px;
@@ -51,7 +51,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (max-device-width: 767px) {
   .page-header-wrapper .left-wrapper {
     width: 160px;
     height: 40px;
