--- a/src/components/PageHeader/pageHeader.scss
+++ b/src/components/PageHeader/pageHeader.scss
@@ -25,7 +25,7 @@
     }
 }
 
-@media screen and (max-width: 991px) and (min-width: 768px) {
+@media screen and (max-width: 991px) and (min-width: 768px) and (max-device-width: 991px) and (min-device-width: 768px) {
     .page-header-wrapper {
         .left-wrapper {
             width: 25vw;
@@ -46,7 +46,7 @@
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (max-device-width: 767px){
     .page-header-wrapper {
         .left-wrapper {
             width: 160px;
