--- a/src/components/PlayNow/playNow.css
+++ b/src/components/PlayNow/playNow.css
@@ -104,7 +104,7 @@
   margin-top: 3vw;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767px) and (max-device-width: 767px) {
   .play-now-wrapper {
     width: 90vw;
     height: 566px;
